# pixel-multiverse-firmware

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
docs/: README.md
docs/epics/: E1-command-core.md  E10-plasma-board.md  E11-panel-layout.md  E12-factory-reset.md  E2-kv-store.md  E3-runtime-display.md  E4-chip-family-builds.md  E5-text-console.md  E6-double-buffering.md  E7-wifi-transport.md  E8-firmware-update.md  E9-descope-identity.md
docs/reference/: board-pins.md
src/: main.cpp  usb_descriptors.cpp  version.hpp
src/command/: command_core.cpp  command_core.hpp  transport.hpp  usb_cdc_transport.cpp  usb_cdc_transport.hpp
src/config/: kv_commands.cpp  kv_commands.hpp  kv_flash.cpp  kv_flash.hpp  kv_format.hpp  kv_log.cpp  kv_log.hpp  kv_store.cpp  kv_store.hpp
src/display/: board_config.cpp  board_config.hpp  selftest.hpp
src/display/cosmic/: cosmic.cpp  display.hpp
src/display/galactic/: display.hpp  galactic.cpp
src/display/i75/: display.hpp  i75.cpp
src/display/plasma/: display.hpp  plasma.cmake  plasma.cpp
src/display/stellar/: display.hpp  stellar.cpp
src/net/: lwipopts.h  multicast.cpp  multicast.hpp  udp_transport.cpp  udp_transport.hpp  wifi.cpp  wifi.hpp
src/recovery/: recovery.cpp  recovery.hpp
test/: board_config_test.cpp  kv_log_test.cpp  kv_store_test.cpp
tools/: multiverse-config.py  multiverse-ctl.sh  multiverse-image.py  multiverse-mcast.py  multiverse-mode.sh  multiverse-wall.py  wall-2x-i75w.json
